--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,260 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page" >
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+    rel="shortcut icon"
+    href="favicon/favicon.ico"
+    type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    >
+    </script>
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="slick/slick.css"
+    />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
+
+
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a class="top-bar__menu-link" href="#menu">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24" height="24"
+                viewBox="0 0 24 24" fill="none">
+                <g clip-path="url(#clip0_320_168)">
+                  <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08"
+                  ></path>
+                </g>
+                <defs>
+                  <clippath id="clip0_320_168">
+                    <rect
+                      width="24"
+                      height="24"
+                      fill="white"
+                    >
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+            <a class="top-bar__logo-link" href="#">
+              <p class="top-bar__logo-text">
+                NA
+                <br>
+                MU
+              </p>
+            </a>
+          </div>
+          <h1 class="header__text">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__button">
+            <div class="header__top">
+              <a class="header__ticket" href="#">КВИТКИ</a>
+            </div>
+            <a class="header__tickets" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_320_174)">
+                  <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" fill="#D7DDE3"
+                  ></path>
+                </g>
+                <defs>
+                  <clippath id="clip0_320_174">
+                    <rect width="24"
+                      height="24"
+                      fill="white">
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__bottom">
+          <div class="menu__top">
+            <a href="#" class="menu__close">
+              <svg xmlns="http://www.w3.org/2000/svg"
+              width="14"
+              height="14"
+              viewBox="0 0 14 14"
+              fill="none"
+              >
+                <path d="M6.99999 5.58599L11.95 0.635986L13.364 2.04999L8.41399 6.99999L13.364 11.95L11.95 13.364L6.99999 8.41399L2.04999 13.364L0.635986 11.95L5.58599 6.99999L0.635986 2.04999L2.04999 0.635986L6.99999 5.58599Z" fill="white"></path>
+              </svg>
+            </a>
+
+            <div class="menu__inform">
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Виставки та
+                      <br>
+                      події
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Про нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="menu__information">
+            <div class="menu__work">
+              <h2 class="menu__layoutwork">Графік роботи</h2>
+              <p class="menu__time">
+                <span class="menu__times">12:00— 20:00</span> середа
+                <br>
+                <span class="menu__times">12:00— 20:00</span> четвер
+                <br>
+                <span class="menu__times">12:00 — 20:00</span> п’ятниця
+                <br>
+                <span class="menu__times">11:00 — 19:00</span> субота
+                <br>
+                <span class="menu__times">11:00 — 19:00</span> неділя
+              </p>
+            </div>
+            <div class="menu__content">
+              <p class="menu__weekend">
+                <span class="menu__times">Вихідні:</span> понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__pad">
+        <div class="menu__cont"></div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section class="actual" id="actual">
+          <div class="container">
+            <div class="actual__products">
+              <h2 class="section-title">Актуальні події</h2>
+              <img
+                src="images/actual.png"
+                alt="actual"
+                class="product__photo"
+              >
+              <article class="product actual__product">
+                <div class="product__top">
+                  <p class="product__title">ВИСТАВКА</p>
+                  <p class="product__data">26.08-29.11.2019</p>
+                </div>
+                <div class="product__rectangle">
+                  <h3 class="product__info">Йду і повертаюсь</h3>
+                  <a class="product__rect" href="#"></a>
+                </div>
+                <p class="product__information">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </article>
+
+              <img
+              src="images/actual2.png"
+              alt="actual"
+              class="product__photo"
+            >
+              <article class="product actual__product">
+                <div class="product__top">
+                  <p class="product__title">ВИСТАВКА</p>
+                  <p class="product__data">26.08-29.11.2019</p>
+                </div>
+                <div class="product__rectangle">
+                  <h3 class="product__info">І спогади і мрії</h3>
+                  <a class="product__rect" href="#"></a>
+                </div>
+                <p class="product__information product__information--new">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </article>
+            </div>
+          </div>
+        </section>
+
+
+
+        <div class="romantic">
+          <div class="romantic__content">
+            <!-- <div class="images">
+              <img
+                class="images__background"
+                src="images/romantic.png"
+                alt="background"
+              >
+            </div> -->
+            <div class="container">
+              <div class="romantic__main">
+                <div class="romantic__control">
+                  <div class="romantic__top">
+                    <p class="romantic__title">ЛЕКЦІЯ</p>
+                    <p class="romantic__data">26/08/2019 - 11:00</p>
+                  </div>
+                  <p class="romantic__information">Від класицизму до романтизму</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <!-- <div class="slider single-item">
+          <div class="slider__item">
+            <img src="images/slider.png" alt="nn">
+          </div>
+          <div class="slider__item">
+            <img src="images/slider1.png" alt="nn">
+          </div>
+        </div> -->
+
+      </div>
+    </main>
+
+
+
+
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <script src="/slick/slick.min.js"></script> -->
+
+
+
   </body>
 </html>
