--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,17 @@
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
-    >
+   >
+    <link
+      rel="icon"
+      href="/src/images/favicon.ico"
+      type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__left">
-        <a href="#menu" class="header__icon header__icon--menu"></a>
+        <a href="#menu" class="icon icon--menu"></a>
 
         <h1 class="header__title">Художній Музей</h1>
         <a class="header__buy-tickets buy-tickets" href="./">
@@ -31,10 +35,285 @@
       </div>
     </header>
 
-    <!-- <div class="main">
-      <div class="container">1</div>
-    </div> -->
+    <aside class="menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="./" class="icon icon--close"></a>
+            <nav class="nav menu__nav">
+              <div class="nav__left">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link">Виставки та події</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="nav__right">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#about-us" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
 
+          <div class="menu__middle"></div>
+          <div class="menu__bottom">
+            <p class="menu__bottom--title">Графік роботи</p>
+            <div class="menu__data">
+              <ul class="schedule__days">
+                <li class="schedule__day">
+                  <strong class="schedule__day--time">12:00 — 20:00</strong>
+                  <span class="schedule__day--name">середа</span>
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--time">12:00 — 20:00</strong>
+                  <span class="schedule__day--name">четвер</span>
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--time">12:00 — 20:00</strong>
+                  <span class="schedule__day--name">п’ятниця </span>
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--time">11:00 — 19:00</strong>
+                  <span class="schedule__day--name">субота</span>
+                </li>
+                <li class="schedule__day">
+                  <strong class="schedule__day--time">11:00 — 19:00</strong>
+                  <span class="schedule__day--name">неділя</span>
+                </li>
+              </ul>
+              <p class="schedule__summary">
+                <strong class="schedule__summary schedule__summary--title">Вихідні:</strong>
+                <span class="schedule__summary schedule__summary--text">
+                  понеділок, вівторок
+                </span>
+                <br>
+                <span class="schedule__summary schedule__summary--text">
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <section class="section" id="events">
+      <h2 class="section__title">Актуальні події</h2>
+      <div class="section__events events">
+        <div class="event event--small">
+          <img
+            src="/src/images/events/event1.jpg"
+            alt="First event"
+            class="event__logo"
+         >
+          <div class="event__data">
+            <div class="event__header">
+              <span class="event__type">ВИСТАВКА</span>
+              <span class="event__time">26.08-29.11.2019</span>
+            </div>
+            <h3 class="event__title">Йду і повертаюсь</h3>
+            <p class="event__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="event event--small">
+          <img
+            src="/src/images/events/event2.jpg"
+            alt="Second event"
+            class="event__logo"
+         >
+          <div class="event__data">
+            <div class="event__header">
+              <span class="event__type">ВИСТАВКА</span>
+              <span class="event__time">26.08-29.11.2019</span>
+            </div>
+            <h3 class="event__title">І спогади і мрії</h3>
+            <p class="event__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="event event--full-size">
+          <img
+            src="/src/images/events/event4.jpg"
+            alt="Third event"
+            class="event__logo"
+         >
+          <div class="event__data">
+            <div class="event__header">
+              <span class="event__type">ЛЕКЦІЯ</span>
+              <span class="event__time">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="event__title">Від класицизму до романтизму</h3>
+            <p class="event__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section__gallery" id="gallery">
+      <h2 class="section__title">Галерея</h2>
+      <div class="gallery">
+        <img
+          src="./images/gallery/gallery1.jpg"
+          alt="NAMU Gallery image 1 alternative name field"
+          class="gallery__item gallery__item--1"
+       ><img
+          src="./images/gallery/gallery2.jpg"
+          alt="NAMU Gallery image 1 alternative name field"
+          class="gallery__item gallery__item--2"
+       ><img
+          src="./images/gallery/gallery3.jpg"
+          alt="NAMU Gallery image 1 alternative name field"
+          class="gallery__item gallery__item--3"
+       ><img
+          src="./images/gallery/gallery4.jpg"
+          alt="NAMU Gallery image 1 alternative name field"
+          class="gallery__item gallery__item--4"
+       >
+      </div>
+    </section>
+
+    <section class="section section__subscribe" id="about-us">
+      <form action="#" class="subscribe__form form">
+        <h3 class="form__title">Підписка</h3>
+        <p class="form__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="form__action">
+          <input
+            type="email"
+            class="form__email"
+            placeholder="E-mail"
+            required
+         >
+          <button class="form__send-btn"></button>
+        </div>
+      </form>
+    </section>
+    <footer class="footer" id="contacts">
+      <div class="footer__top">
+        <a class="footer__logo" href="./">
+          NA
+          <br>
+          MU
+        </a>
+        <div class="footer__icons">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            target="_blank"
+            class="icon icon--facebook"
+          ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            target="_blank"
+            class="icon icon--instagram"
+          ></a>
+        </div>
+      </div>
+
+      <div class="middle__column column--1">
+        <p class="footer-column__title">Графік роботи</p>
+        <div class="footer-column__content">
+          <ul class="schedule__days">
+            <li class="schedule__day">
+              <strong class="schedule__day--time">12:00 — 20:00</strong>
+              <span class="schedule__day--name">середа</span>
+            </li>
+            <li class="schedule__day">
+              <strong class="schedule__day--time">12:00 — 20:00</strong>
+              <span class="schedule__day--name">четвер</span>
+            </li>
+            <li class="schedule__day">
+              <strong class="schedule__day--time">12:00 — 20:00</strong>
+              <span class="schedule__day--name">п’ятниця </span>
+            </li>
+            <li class="schedule__day">
+              <strong class="schedule__day--time">11:00 — 19:00</strong>
+              <span class="schedule__day--name">субота</span>
+            </li>
+            <li class="schedule__day">
+              <strong class="schedule__day--time">11:00 — 19:00</strong>
+              <span class="schedule__day--name">неділя</span>
+            </li>
+          </ul>
+          <br>
+          <p class="schedule__summary">
+            <strong class="schedule__summary schedule__summary--title">Вихідні:</strong>
+            <span class="schedule__summary schedule__summary--text">
+              понеділок, вівторок
+            </span>
+            <br>
+            <span class="schedule__summary schedule__summary--text">
+              Каса припиняє роботу за 1 годину
+            </span>
+            <br>
+            <span class="schedule__summary schedule__summary--text">
+              до закриття музею
+            </span>
+          </p>
+        </div>
+      </div>
+
+      <div class="middle__column column--2">
+        <p class="footer-column__title">Контакти:</p>
+        <p class="footer-column__content">
+          вул. М. Грушевського, 6; Київ, 01001<br>
+          тел. +38 (044) 278-13-57<br>
+          факс +38 (044) 278-74-54 <br>e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+
+      <div class="footer__arrow">
+        <a href="#header" class="arrow_up"></a>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__nav">
+        <ul class="footer__nav_column footer__nav_column--1">
+          <li class="footer__nav_item">
+            <a href="#gallery" class="footer__nav_link">Галерея</a>
+          </li>
+          <li class="footer__nav_item">
+            <a href="#events" class="footer__nav_link">Виставки та події</a>
+          </li>
+        </ul>
+        <ul class="footer__nav_column footer__nav_column--2">
+          <li class="footer__nav_item">
+            <a href="#about-us" class="footer__nav_link">Про Нас</a>
+          </li>
+          <li class="footer__nav_item">
+            <a href="#contacts" class="footer__nav_link">Контакти</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__copyright">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
