--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.png"
+    >
   </head>
   <body class="page__body">
     <!-- Header  -->
@@ -67,7 +72,7 @@
 
           <ul class="menu-nav">
             <li class="menu-nav__item">
-              <a href="#galery" class="menu-nav__link">Галерея</a>
+              <a href="#gallery" class="menu-nav__link">Галерея</a>
             </li>
             <li class="menu-nav__item">
               <a href="#about" class="menu-nav__link">Про Нас</a>
@@ -172,82 +177,54 @@
     <!-- #Events -->
 
     <!-- Gallery -->
-    <div class="gallery">
+    <div class="gallery" id="gallery">
       <div class="container">
-        <div class="gallery-slider gallery-middle">
-          <div class="gallery-slider__slides">
-            <input
-              type="radio"
-              class="gallery-slider__input"
-              name="button"
-              id="btn1"
-              checked
+        <div class="gallery__slides">
+          <div class="gallery__slide">
+            <img
+            src="./images/gallery-1.png"
+            alt="slide-1"
+            class="gallery__img"
             >
-            <input
-              type="radio"
-              class="gallery-slider__input"
-              name="button"
-              id="btn2"
-            >
-            <input
-              type="radio"
-              class="gallery-slider__input"
-              name="button"
-              id="btn3"
-            >
-            <input
-              type="radio"
-              class="gallery-slider__input"
-              name="button"
-              id="btn4"
-            >
-            <div class="gallery-slider__slide s1">
-              <img
-              src="./images/gallery-1.png"
-              alt="slide-1"
-              class="gallery-slider__img"
-              >
-            </div>
-
-            <div class="gallery-slider__slide">
-              <img
-              src="./images/gallery-2.png"
-              alt="slide-2"
-              class="gallery-slider__img"
-              >
-            </div>
-
-            <div class="gallery-slider__slide">
-              <img
-              src="./images/gallery-3.png"
-              alt="slide-3"
-              class="galery-slider__img"
-              >
-            </div>
-
-            <div class="gallery-slider__slide">
-              <img
-              src="./images/gallery-4.png"
-              alt="slide-4"
-              class="gallery-slider__img"
-              >
-            </div>
           </div>
+
+          <div class="gallery__slide">
+            <img
+            src="./images/gallery-2.png"
+            alt="slide-2"
+            class="gallery__img gallery__img-2"
+            >
+          </div>
+
+          <div class="gallery__slide">
+            <img
+            src="./images/gallery-3.png"
+            alt="slide-3"
+            class="gallery-slider__img gallery__img-3"
+            >
+          </div>
+
+          <div class="gallery__slide">
+            <img
+            src="./images/gallery-4.png"
+            alt="slide-4"
+            class="gallery__img gallery__img-4"
+            >
+          </div>
+
         </div>
-      </div>
-      <div class="gallery-slider__nav">
-        <!-- <div class="epta"> -->
-        <label for="btn1" class="gallery-slider__btn"></label>
-        <label for="btn2" class="gallery-slider__btn"></label>
-        <label for="btn3" class="gallery-slider__btn"></label>
-        <label for="btn4" class="gallery-slider__btn"></label>
-        <!-- </div> -->
+        <div class="gallery__nav">
+          <div class="gallery__nav-btn"></div>
+          <div class="gallery__nav-btn"></div>
+          <div class="gallery__nav-btn"></div>
+          <div class="gallery__nav-btn"></div>
+        </div>
       </div>
     </div>
     <!-- #Gallery -->
 
     <!-- Subscribe -->
-    <section class="subscribe">
+    <section class="subscribe" id="about">
       <div class="container">
         <div class="subscribe__wrapper">
           <h2 class="subscribe__title">Підписка</h2>
@@ -266,6 +243,114 @@
       </div>
     </section>
     <!-- #Subscribe -->
+
+    <!-- Footer -->
+    <section class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__wrapper">
+            <div class="footer__links">
+              <a href="#" class="footer__logo">
+                <img
+                  src="./images/logo.png"
+                  alt="logo"
+                  class="logo"
+                >
+              </a>
+              <div class="footer__icons">
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__icons-link"
+                  target="_blank"
+                >
+                  <img
+                    src="./icons/facebook-icon.png"
+                    alt="facebook-icon"
+                    class="footer__icon"
+                  >
+                </a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__icons-link"
+                  target="_blank"
+                >
+                  <img
+                    src="./icons/instagram-icon.png"
+                    alt="instagram-icon"
+                    class="footer__icon"
+                  >
+                </a>
+              </div>
+            </div>
+            <div class="footer__content">
+              <div class="footer__schedule">
+                <h4 class="footer__schedule-title">Графік роботи</h4>
+                <ul class="footer__schedule-items">
+                  <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> середа</li>
+                  <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> четвер</li>
+                  <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> п’ятниця</li>
+                  <li class="footer__schedule-item"><strong>11:00 — 19:00</strong> субота</li>
+                  <li class="footer__schedule-item"><strong>11:00 — 19:00</strong> неділя</li>
+                </ul>
+                <p class="footer__schedule-info">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <span>
+                    Каса припиняє роботу за 1 годину
+                  </span>
+                  <span>
+                    до закриття музею
+                  </span>
+                </p>
+              </div>
+              <div class="footer__contacts">
+                <h4 class="footer__contacts-title">Контакти:</h4>
+                <div class="footer__info">
+                  <a
+                    href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttus"
+                    class="footer__info-link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <a href="tel:380442781357" class="footer__info-link">тел. +38 (044) 278-13-57</a>
+                  <a href="tel:380442787454" class="footer__info-link">факс +38 (044) 278-74-54</a>
+                  <a href="mailto:info@namu.kiev.ua" class="footer__info-link">e-mail: info@namu.kiev.ua</a>
+                </div>
+                <a href="#" class="footer__button">
+                  <img
+                    src="./icons/arrow-up.png"
+                    alt="footer-btn"
+                    class="footer__button-arrow"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <ul class="footer-nav">
+            <li class="footer-nav__item">
+              <a href="#gallery" class="footer-nav__link">Галерея</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#about" class="footer-nav__link">Про Нас</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#events" class="footer-nav__link">Виставки та <br>події</br></a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#contacts" class="footer-nav__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__rights">
+          <p class="footer__rights-text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__rights-text">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </section>
+    <!-- #Footer -->
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
