--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,198 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./icons/favicon-32x32.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./icons/favicon-32x32.png"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body">
+    <header class="header">
+
+      <div class="header__image">
+        <p class="header__logo">
+          NA
+          <br>
+          MU
+        </p>
+      </div>
+
+      <div class="header__content">
+        <a href="#" class="header__burger-menu">
+          <img src="./icons/burger-menu-icon.svg" alt="menu">
+        </a>
+
+        <h1 class="header__tittle">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <div class="buttonTickets">
+          <div class="buttonTickets__text-wraper">
+            <a href="#" class="buttonTickets__text">
+              КВИТКИ
+            </a>
+          </div>
+
+          <a href="#" class="buttonTickets__pointer">
+            <img src="./icons/button-pointer-icon.svg" alt="pointer">
+          </a>
+        </div>
+
+        <div class="vertical">
+          <div class="vertical__line"></div>
+
+          <p class="vertical__text">
+            ПОДІЇ
+          </p>
+        </div>
+      </div>
+    </header>
+
+    <main class="body__main">
+      <section class="relevant" id="relevant">
+        <div class="relevant__tittle-wraper">
+          <h3 class="relevant__tittle">
+            Актуальні події
+          </h3>
+        </div>
+
+        <div class="action action--one">
+          <div class="action__image action__image--one"></div>
+
+          <div class="action__content">
+            <div class="details">
+              <p class="details__kind">
+                ВИСТАВКА
+              </p>
+
+              <div class="details__when">
+                26.08-29.11.2023
+              </div>
+            </div>
+
+            <div class="action-tittle">
+              <h3 class="action-tittle__text">
+                Йду і повертаюсь
+              </h3>
+
+              <div class="action-tittle__red-squere"></div>
+            </div>
+
+            <p class="description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="action action--two">
+          <div class="action__image action__image--two"></div>
+
+          <div class="action__content">
+            <div class="details">
+              <p class="details__kind">
+                ВИСТАВКА
+              </p>
+
+              <div class="details__when">
+                26.08-29.11.2023
+              </div>
+            </div>
+
+            <div class="action-tittle">
+              <h3 class="action-tittle__text">
+                І спогади і мрії
+              </h3>
+              <div class="action-tittle__red-squere"></div>
+            </div>
+
+            <p class="description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="lection">
+          <div class="lection__image"></div>
+
+          <div class="lection__content">
+            <div class="lection__details">
+              <p class="lection__kind">
+                ЛЕКЦІЯ
+              </p>
+
+              <div class="lection__when">
+                26/08/2023 - 11:00
+              </div>
+            </div>
+
+            <h3 class="lection__tittle">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="gallery__tittle-wraper">
+          <h3 class="gallery__tittle">
+            Галерея
+          </h3>
+        </div>
+
+        <div class="slider-wrapper">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide swiper-slide1"></div>
+              <div class="swiper-slide swiper-slide2"></div>
+              <div class="swiper-slide swiper-slide3"></div>
+              <div class="swiper-slide swiper-slide4"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div class="gallery__photos">
+          <div class="gallery__photo gallery__photo--1"></div>
+          <div class="gallery__photo gallery__photo--2"></div>
+          <div class="gallery__photo gallery__photo--3"></div>
+          <div class="gallery__photo gallery__photo--4"></div>
+        </div>
+      </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper('.swiper', {
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+        spaceBetween: 16,
+        slidesPerView: "auto",
+        freeMode: true,
+      });
+    </script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
